# gemini-openai-adapter

./: .clineignore  .clinerules  .gitattributes  .gitignore  CODEX_LIKE_TESTS.md  COMPANY_SYNC_README.md  README.md  START_HERE.bat  START_HERE.command  TEAM_QUICK_START.md  adapter_env.example.ps1  capture_edge_gemini_cookies_cdp.py  cline_patch_target.py  export_company_sync_pack.ps1  install_adapter_dependencies.bat  open_usage_dashboard.bat  openai_adapter_server.py  pyproject.toml  refresh_gemini_cookies_from_browser.py  repair_adapter_auth_and_test.ps1  repair_auth_with_edge_cdp.ps1  start_ai_server.bat  team_menu.py  公司电脑部署使用说明.md
docs/: CODEX_LIKE_TESTS.md  COMPANY_SYNC_README.md  DEVELOPMENT_HANDOFF.md  MACOS_QUICK_START.md  TEAM_QUICK_START.md  公司电脑部署使用说明.md
examples/: adapter_env.example.ps1  adapter_env.example.sh  gemini_cookies.example.json
scripts/: adapter_proxy.ps1  capture_browser_gemini_cookies_cdp.py  capture_edge_gemini_cookies_cdp.py  export_company_sync_pack.ps1  install_adapter_dependencies.bat  install_adapter_dependencies.sh  launch_adapter.ps1  launch_adapter.sh  open_usage_dashboard.bat  refresh_gemini_cookies_from_browser.py  repair_adapter_auth_and_test.ps1  repair_auth_with_browser_cdp.ps1  repair_auth_with_edge_cdp.ps1  run_server.ps1  run_server.sh  start_ai_server.bat  team_menu.py
tests/: test_adapter_openai_compat.ps1
usage-sync/: README.md  adapter_usage.DESKTOP-JCIL17F.jsonl  adapter_usage.pc-bf8048e9b4.jsonl
