[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-openai-adapter"
version = "0.1.0"
description = "Local OpenAI-compatible FastAPI adapter for Gemini WebAPI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "youyi666"},
]
keywords = ["Gemini", "OpenAI", "FastAPI", "Cline", "Continue"]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "curl-cffi~=0.15.0",
    "fastapi",
    "loguru~=0.7.3",
    "orjson~=3.11.7",
    "pydantic~=2.12.5",
    "sse-starlette",
    "uvicorn",
]

[project.optional-dependencies]
browser = [
    "browser-cookie3",
    "playwright",
]

[project.urls]
Repository = "https://github.com/youyi666/gemini-openai-adapter"

[tool.setuptools]
py-modules = [
    "openai_adapter_server",
    "refresh_gemini_cookies_from_browser",
    "capture_edge_gemini_cookies_cdp",
    "team_menu",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gemini_webapi*"]
